display dynamic name with html form

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,6 @@
-<h1>Hello index</h1>
+<h1> Welcome To TESTPROJECT_1</h1>
+<h3> Enter you name </h3>
+<form method="" action="home">
+    <textarea name="name"></textarea>
+    <input type="submit"></input>
+</form>
