--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,5 @@
+{%load static%}
+<link rel="stylesheet" href="{% static "style.css" %}" > 
 <h1> Welcome To TESTPROJECT_1</h1>
 <h3> Enter you name </h3>
 <form method="POST" action="home">
